# discount-checker-bot

./: .gitignore  exceptions.py  main.py  pyproject.toml
src/: commands.py  db_funcs.py  messages.py
src/commands/: command_funcs.py  messages.py
src/database/: db_funcs.py
