[tool.poetry]
name = "telegram-training"
version = "0.1.0"
description = ""
authors = ["Vladislav Vasilev <akiro_jpg@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telegram = "^0.0.1"
python-telegram-bot = "^20.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
